# haskell-automatas

./: LICENSE  README.md  automatas.cabal
src/main/hs/: Main.hs
src/main/hs/Auto/DFA/: DFA.hs  TestDFAs.hs
src/test/hs/Auto/DFA/: DFASpec.hs
