name:                       automatas
version:                    0.1.0.0
license:                    MIT
license-file:               LICENSE
author:                     niklasf
maintainer:                 niklasf@cs.umu.se
category:                   Language
build-type:                 Simple
cabal-version:              >=1.10

executable automatas
    main-is:                Main.hs
    ghc-options:            -Wall
    hs-source-dirs:         src/main/hs/
    default-language:       Haskell2010
    build-depends:          base >=4.6 && <4.7
                          , QuickCheck

test-suite dfa
    type:                   exitcode-stdio-1.0
    default-language:       Haskell2010
    hs-source-dirs:         src/main/hs/, src/test/hs/
    ghc-options:            -Wall
    Main-is:                Spec.hs
    other-modules:          Auto.DFA.DFASpec
    build-depends:          base
                          , hspec >= 1.3
                          , QuickCheck
                          , random

